# docs/openapi3.yaml
@@ -1464,6 +1464,21 @@ paths:
             summary: Get a paginated list of tagss by custom conditions
             tags:
                 - tags
+    /api/v1/tags/list/all:
+        get:
+            description: Returns a list of all tags.
+            responses:
+                "200":
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/types.ListTagssReply'
+                    description: OK
+            security:
+                - BearerAuth: []
+            summary: Get all tags
+            tags:
+                - tags
     /api/v1/tradeTags:
         post:
             description: Creates a new tradeTags entity using the provided data in the request body.
@@ -1557,6 +1572,21 @@ paths:
             security:
                 - BearerAuth: []
             summary: Update a tradeTags by tradeID
+            tags:
+                - tradeTags
+    /api/v1/tradeTags/all:
+        post:
+            description: Returns a list of all tradeTags.
+            responses:
+                "200":
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/types.ListTradeTagsReply'
+                    description: OK
+            security:
+                - BearerAuth: []
+            summary: 获取全部的tradeTags
             tags:
                 - tradeTags
     /api/v1/tradeTags/list:
